--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test:api": "node tests/api-smoke.mjs"
   },
   "dependencies": {
+    "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
